# bounty-program

./: .dockerignore  .editorconfig  .gitignore  .linkspector.yml  Cargo.toml  README.md  SECURITY.md  SUBMISSION_CHECKLIST.md  robots.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bounty-program-application.md  bounty_submission.md  general-issue.yml  zama-bounty-program--application.md  zama-bounty-program--proposition.md  zama-bounty-program--submission.md
.github/workflows/: auto_reply.yml  ci.yml  linkcheck.yml  linkchecker.yml  validate-issues.yaml
Bounties/: README.md
Bounties/Application/: README.md  create-a-dark-market-app.md  create-a-secp256k1-tutorial.md  create-a-sha256-tutorial.md  create-iris-identification-app-tutorial.md  create-iris-identification-app.md  create-regex-engine-tutorial.md  regex-engine.md
Bounties/Cryptography/: GLWE_bootstrapping.md  README.md
Bounties/Engineering/: README.md  add-bitwise-operations.md  add-bitwise-shift-operations.md  add-comparison-operations.md  create-a-sha256-tutorial.md  create-iris-identification-app.md  create-key-value-database-app.md  find-error-probability-bug.md
Bounties/FPGA/: README.md  fpga_4b_pbs.md
Bounties/Machine Learning/: add-kernel-svm.md  fhe-training.md  tutorial-Adding-a-comparison-of-regressors.md  tutorial-for-new-models.md
Terms and Conditions/: terms_and_conditions_for_companies.md
Terms_and_Conditions/: terms_and_conditions_for_companies.md  terms_and_conditions_for_individuals.md
crates/fhe_fixed/: Cargo.toml
crates/fhe_fixed/src/: lib.rs
(+31 files in other folders)
